# magnus-effect

./: .gitignore  .gitmodules  CMakeLists.txt  Data.txt  README.md  data.csv
Headers/: camera.h  camera.hpp  glitter.hpp  light.h  light.hpp  mesh.hpp  model.h  model.hpp  rigidbody.h  rigidbody.hpp  shader.h  shader.hpp  transform.h  transform.hpp
Models/: ball.blend  plane.blend
Shaders/: scene.frag  scene.vert  standard.frag  standard.vert
Sources/: camera.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  rigidbody.cpp  scene.cpp  shader.cpp  transform.cpp
shaders/: depth.frag  depth.vert  scene.frag  scene.vert  trace.frag  trace.vert
src/: camera.cpp  camera.h  direction.cpp  direction.h  fileReader.cpp  fileReader.h  filereader.cpp  filereader.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  rigidbody.cpp  rigidbody.h  scene.cpp  scene.h  shader.h  trace.cpp  trace.h  transform.cpp  transform.h
